Fix for https://github.com/CenterForOpenScience/openscienceframework.org/issues/685 where typeahead hint is misaligned to the input box.

--- a/website/static/css/projectorganizer.css
+++ b/website/static/css/projectorganizer.css
@@ -158,7 +158,7 @@ input.typeahead.tt-input {
 .tt-hint {
     width: 100%;
     height: 30px;
-    padding: 8px 12px;
+    padding: 21px 12px;
     font-size: 18px;
     border: 2px solid #ccc;
     -webkit-border-radius: 8px;
